added open source code

--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
         </div>
       </div>
     </div>
+    <div>
+      <small class="code"
+        ><a href="https://github.com/blumeboudou/weather-app" target="_blank"
+          >Open-source code</a
+        >
+        by Florencia Boudou</small
+      >
+    </div>
     <script src="src/script.js"></script>
   </body>
 </html>
